# SS2025FP_T2

./: .gitignore  README.md
Dokumentation/: FP-T2-Dokumentation.tex  Makefile  VERSION  bibliography.bib  classicthesis-config.tex  fernuni-hagen-thesis-config.tex  fernuni-hagen-thesis.sty
Dokumentation/Kapitel/: audio_linux.tex  audio_mac.tex  audio_windows.tex  datenbank.tex  einleitung.tex  einleitung_MacOS.tex  evaluation.tex  fazit_ausblick.tex  grundlagen.tex  implementierung.tex  konzeption_architektur.tex  problemstellung.tex  python.tex  stand_der_technik.tex  transkription.tex  ueberblick.tex  wav_thread.tex
Dokumentation/Sonstiges/: Acronyms.tex  Contents.tex  Figures.tex  Listings.tex  Tables.tex  Titlepage.tex
Frontend/: CMakeLists.txt  Doxyfile  asrprocessmanager.cpp  asrprocessmanager.h  audiofactory.cpp  audiofactory.h  capturethread.cpp  capturethread.h  databasemanager.cpp  databasemanager.h  filemanager.cpp  filemanager.h  installationdialog.cpp  installationdialog.h  maccapture.cpp  maccapture.h  maccapturethread.cpp  maccapturethread.h  main.cpp  mainwindow.cpp  mainwindow.h  multisearchdialog.cpp  multisearchdialog.h  pulsecapturethread.cpp  pulsecapturethread.h  pythonenvironmentmanager.cpp  pythonenvironmentmanager.h  ringbuffer.h  searchdialog.cpp  searchdialog.h  settingswizard.cpp  settingswizard.h  speakereditordialog.cpp  speakereditordialog.h  taggeneratormanager.cpp  taggeneratormanager.h  texteditordialog.cpp  texteditordialog.h  transcription.cpp  transcription.h  (+6 more)
Frontend/python/: asr_backend.py  demo.py  generate_tags.py  requirements.txt  run_asr.py  setup_env.bat  setup_env.sh  setup_env_mac.sh
